Additional default directories

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
                 "src/controllers/",
                 "src/interfaces/",
                 "src/exceptions/",
-                "src/models/"
+                "src/models/",
+                "src/repositories/",
+                "src/traits/"
             ]
         }
     },
