--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,6 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 # 2 space indentation
-[*.html.twig]
+[*.{html,twig}]
 indent_style = space
 indent_size = 2
