--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,7 @@
     "autoload": {
         "psr-4": {
             "App\\": [
-                "src/classes/",
-                "src/controllers/",
-                "src/exceptions/",
-                "src/interfaces/",
-                "src/models/",
-                "src/repositories/",
-                "src/traits/"
+                "src/"
             ]
         }
     },
