--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.3",
+        "php": "^8.2",
         "altorouter/altorouter": "^2.0",
         "gabordemooij/redbean": "dev-master",
         "plasticbrain/php-flash-messages": "^1.0",
@@ -13,14 +13,12 @@
     },
     "require-dev": {
         "approvals/approval-tests": "dev-Main",
-        "phpunit/phpunit": "^9",
+        "phpunit/phpunit": "^9.0|^10.0",
         "rector/rector": "dev-main"
     },
     "autoload": {
         "psr-4": {
-            "App\\": [
-                "src/"
-            ]
+            "App\\": ["src/"]
         }
     },
     "autoload-dev": {
@@ -35,7 +33,8 @@
         }
     ],
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "optimize-autoloader": true
     },
     "scripts": {
         "rector-dr": "vendor/bin/rector --dry-run",
